--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/server.js"
-        },
-        {
-            "source": "/(.*)",
-            "destination": "/$1"
+            "destination": "/api/index.js"
         }
     ]
 }
